<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txtPickDays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pickDaysTitle"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <CheckBox
            android:id="@+id/sunday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:minHeight="48dp"
            android:text="@string/txtSunday"
            android:textColor="@android:color/black" />

        <CheckBox
            android:id="@+id/monday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:minHeight="48dp"
            android:text="@string/txtMonday"
            android:textColor="@android:color/black" />

        <CheckBox
            android:id="@+id/tuesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:minHeight="48dp"
            android:text="@string/txtTuesday"
            android:textColor="@android:color/black" />

        <CheckBox
            android:id="@+id/wednesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:minHeight="48dp"
            android:text="@string/txtWednesday"
            android:textColor="@android:color/black" />

        <CheckBox
            android:id="@+id/thursday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:minHeight="48dp"
            android:text="@string/txtThursday"
            android:textColor="@android:color/black" />

        <CheckBox
            android:id="@+id/friday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:minHeight="48dp"
            android:text="@string/txtFriday"
            android:textColor="@android:color/black" />

        <CheckBox
            android:id="@+id/saturday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:minHeight="48dp"
            android:text="@string/txtSaturday"
            android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/cancelPick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CANCEL"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="150dp"
            android:textColor="@color/colorAccent"
            android:layout_marginBottom="15dp"
            />

        <TextView
            android:id="@+id/setPick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SET"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/colorAccent"
            />


    </LinearLayout>

    </LinearLayout>





</LinearLayout>