<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity.AddMedicament">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            app:titleTextColor="@android:color/white">

        </android.support.v7.widget.Toolbar>


        <android.support.v7.widget.CardView
            android:id="@+id/card_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/medName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/txtMedName"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="5dp">

                    <EditText
                        android:id="@+id/input_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/insert_name"
                        android:singleLine="true"
                        android:textColor="@color/colorAccent"
                        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_photos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:padding="20dp"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="5dp">


                <LinearLayout
                    android:id="@+id/photos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imgCapsule"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/capsule" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imgTablet"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/tablet" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imgInjection"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/injection" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imgLiquid"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/liquid" />


                </LinearLayout>


            </LinearLayout>
        </android.support.v7.widget.CardView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/reminders12"
                layout="@layout/reminders_12" />

        </ScrollView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_schedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtSchedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/txtScheduleTitle"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/txtStartAt"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/scheduleDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="15dp"
                        android:text="Today"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />
                </LinearLayout>

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="5dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/txtDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/txtDurationTitle"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/rdbGrDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <RadioButton
                        android:id="@+id/continuous"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/txtRdbContinuous"
                        android:textColor="#808080"
                        android:textSize="16sp"
                        tools:ignore="TouchTargetSizeCheck" />


                    <RadioButton
                        android:id="@+id/numberOfDays"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:checked="false"
                        android:text="@string/txtRdbNumberOfDays"
                        android:textColor="#808080"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/daysnum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="170dp"
                        android:layout_marginTop="-25dp"
                        android:gravity="center|right"
                        android:text="1"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"
                        android:visibility="invisible" />


                </RadioGroup>


                <View
                    android:id="@+id/divider1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="5dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/txtFrequency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/txtFrequencyTitle"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/rdbGrFrequency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <RadioButton
                        android:id="@+id/everyDay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/txtRdbEveryDay"
                        android:textColor="#808080"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/specificDays"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/txtRdbSpecDays"
                        android:textColor="#808080"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/txtSpecificDays"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="195dp"
                        android:layout_marginTop="-25dp"
                        android:gravity="center|right"
                        android:text="M, T, S, F"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"
                        android:visibility="invisible" />

                    <RadioButton
                        android:id="@+id/daysInterval"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:checked="false"
                        android:text="@string/txtRdbIntervalDays"
                        android:textColor="#808080"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txtDaysInterval"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="170dp"
                        android:layout_marginTop="-35dp"
                        android:gravity="center|right"
                        android:text="every 2 days"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"
                        android:visibility="invisible" />


                </RadioGroup>


            </LinearLayout>


        </android.support.v7.widget.CardView>


        <Button
            android:id="@+id/btn_addMed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="15dp"
            android:background="@color/colorPrimary"
            android:text="@string/btnAdd"
            android:textColor="@android:color/white" />

    </LinearLayout>


</ScrollView>
